--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
     {% include head.html %}
     <body id="page-top" class="index">
     {% include banner.html %}
+    {% include nav.html %}
     {% include header.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
