--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,9 @@
     <body id="page-top" class="index">
     {% include banner.html %}
     {% include nav.html %}
+
     <div class="container">
-      {% include row-1.html %}
-      {% include row-2.html %}
+      {{ content }}
     </div>
 
     {% include footer.html %}
