--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,8 @@
-<a href="/">
-  <div class="banner">
-  </div>
-</a>
+<div class="banner">
+  <a href="/">
+    <div class="banner-circle">
+      <div class="banner-image">
+      </div>
+    </div>
+  </a>
+</div>
