--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,11 @@
     <body id="page-top" class="index">
     {% include banner.html %}
     {% include nav.html %}
-    <div class="container">
-      {% include row-1.html %}
-      {% include row-2.html %}
+    <div class="content">
+      <div class="container">
+        {% include row-1.html %}
+        {% include row-2.html %}
+      </div>
     </div>
 
     {% include footer.html %}
