--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -6,7 +6,9 @@
 
 body {
     overflow-x: hidden;
-    background-color: #5e30d1;
+    background-color: #fff;
+    color: black;
+    color: #000
 }
 
 p {
@@ -77,7 +79,7 @@ hr.star-primary:after {
     background-color: #fff;
 }
 
-.img-centered {
+.center {
     margin: 0 auto;
 }
 
@@ -255,10 +257,10 @@ section.success {
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #fff;
+    border: solid 2px #000;
     font-size: 20px;
-    color: #fff;
-    background: 0 0;
+    color: #ea4df4;
+    background-color: #fff;
     transition: all .3s ease-in-out;
 }
 
@@ -266,9 +268,9 @@ section.success {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    border: solid 2px #fff;
+    border: solid 2px #ea4df4;
     color: #{{ site.color.primary }};
-    background: #fff;
+    background: #1D0120;
 }
 
 .floating-label-form-group {
@@ -354,11 +356,12 @@ footer .footer-below {
     display: inline-block;
     width: 50px;
     height: 50px;
-    border: 2px solid #fff;
+    border: 2px solid #000;
     border-radius: 100%;
     text-align: center;
     font-size: 20px;
     line-height: 45px;
+    box-shadow: 4px 4px black;
 }
 
 .btn:focus,
@@ -460,52 +463,90 @@ footer .footer-below {
 
 .navigation {
   text-align: center;
+  background-color: #52573e;
 }
 
 .banner {
-  min-height: 130px;
-  background-image: url("img/banner.jpg");
+  background-color: #52573e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-circle {
+  border-radius: 50%;
+  height: 100%;
+  background-color: white;
+  width: 368px;
+  height: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-image {
+  display: block;
+  width: 287px;
+  height: 250px;
+  background-image: url("img/banner_small.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  margin-top: 50px;
 }
 
-.join {
-  margin-bottom: 40px;
-  height: 0;
-}
-
-.join button {
-  position: relative;
-  left: 10%;
-  top: -40px;
-  width: 200px;
-  height: 75px;
+.join a {
+  width: 112px;
+  height: 60px;
+  background: url("img/join.svg");
+  background-size: 100% auto;
+  padding: 0;
+  border: none;
+  display: inline-block;
 }
 
 .social {
-  margin-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 .box {
-  height: 200px;
-  color: #fff;
+  height: 400px;
+  color: #1D0120;
+  background-image: url("img/background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .box h3 {
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .twitch-embedded {
   height: 100%;
 }
 
+.box.twitch {
+  position: relative;
+}
+
+.twitch-wrapper {
+  position: absolute;
+  top: 58px;
+  bottom: 0px;
+  width: 100%;
+}
+
 @media(min-width:768px) {
   .banner {
-    min-height: 400px;
+    min-height: 340px;
   }
-  .join button {
-    width: 400px;
+  .join a {
+    width: 166px;
+    height: 90px;
   }
 }
 
@@ -524,4 +565,22 @@ a:active,
 a.active {
     outline: 0;
     color: #8ad7ff;
+}
+
+.content {
+  background-color: white;
+}
+
+.instagram-box, .discord-box {
+  width: 250px;
+}
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.carousel-control.left, .carousel-control.right {
+   background-image:none !important;
+   filter:none !important;
 }
