--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,13 @@
 <div class="navigation">
-  <div class="join">
-    <button>Join</button>
-  </div>
+  <!-- <div class="join">
+    <a href="http://join.me"></a>
+  </div> -->
 
   <div class="social">
     <ul class="list-inline">
       {% for network in site.social %}
       <li>
-        <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
+        <a href="{{ network.url }}" target="_blank" class="btn-social btn-outline"><i class="fab fa-{{ network.title }}"></i></a>
       </li>
       {% endfor %}
     </ul>
