--- a/_includes/row-1.html
+++ b/_includes/row-1.html
@@ -1,25 +1,31 @@
 <div class="row">
-  <div class="col-sm-3 box info">
-    <h3>Info</h3>
-    {% for page in site.pages %}
-    {% if page.title == 'Info' %}
-      ...
-    {% endif %}
-    {% endfor %}
+  <div class="col-sm-3">
+    <div class="box info">
+      <h3>Info</h3>
+      {% for page in site.pages %}
+      {% if page.title == 'Info' %}
+        {{ page.content }}
+      {% endif %}
+      {% endfor %}
+    </div>
   </div>
-  <div class="col-sm-6 box featured-streamer">
-    {% for page in site.pages %}
-    {% if page.title == 'Featured Streamer' %}
-      Featured Streamer
-    {% endif %}
-    {% endfor %}
+  <div class="col-sm-6">
+    <div class="box featured-streamer">
+      <h3>Featured Streamer</h3>
+      {% for page in site.pages %}
+      {% if page.title == 'Featured Streamer' %}
+        {{ page.content }}
+      {% endif %}
+      {% endfor %}
+    </div>
   </div>
-  <div class="col-sm-3 box news">
-    <h3>News</h3>
-    <ul>
-    {% for post in site.categories.news %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+  <div class="col-sm-3">
+    <div class="box info">
+      <h3>News</h3>
+      <ul>
+      {% for post in site.categories.news %}
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endfor %}
+    </div>
   </div>
 </div>
